cangjie-language-server/test/testChr/normalTest/Modifier/src/classP1/c.cj
// Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.
// This source file is part of the Cangjie project, licensed under Apache-2.0
// with Runtime Library Exception.
//
// See https://cangjie-lang.cn/pages/LICENSE for license information.

package default.classP1

class A {
    private var v = 0
}

let b = A().v  // error


public class B {
    public var b = 0
}
